--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -441,13 +441,13 @@
       <tr>
           <td>57</td>
         <td><a href="https://www.lingohut.com/en/v771543/arabic-lessons-shopping">Shopping</a></td>
-        <td> </td>
+        <td>Fuwzi(00%) </td>
         <td> </td>
       </tr>
       <tr>
           <td>58</td>
         <td><a href="https://www.lingohut.com/en/v771544/arabic-lessons-shopping-for-clothes">Shopping for clothes </a></td>
-        <td> </td>
+        <td>Fuwzi(00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -458,19 +458,19 @@
       <tr>
           <td>59</td>
         <td><a href="https://www.lingohut.com/en/v771545/arabic-lessons-negotiating-a-price">Negotiating a price</a></td>
-        <td> </td>
+        <td>Fuwzi(00%) </td>
         <td> </td>
       </tr>
       <tr>
           <td>60</td>
         <td><a href="https://www.lingohut.com/en/v771546/arabic-lessons-grocery-store">Grocery store</a></td>
-        <td> </td>
+        <td>Fuwzi(00%) </td>
         <td> </td>
       </tr>
       <tr>
           <td>61</td>
         <td><a href="https://www.lingohut.com/en/v771547/arabic-lessons-grocery-shopping-list">Grocery shopping list </a></td>
-        <td> </td>
+        <td>Fuwzi(00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -486,13 +486,13 @@
       <tr>
           <td>63</td>
         <td><a href="https://www.lingohut.com/en/v771549/arabic-lessons-sweet-fruits">Sweet fruits</a></td>
-        <td> </td>
+        <td>Fuwzi(00%) </td>
         <td> </td>
       </tr>
       <tr>
         <td>64</td>
         <td><a href="https://www.lingohut.com/en/v771550/arabic-lessons-vegetables">Vegetables</a></td>
-        <td> </td>
+        <td>Fuwzi(00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
