--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -1182,7 +1182,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td><a href=""></a></td>
+        <td><a href="https://samerguda.github.io/arabic.expresions/arabic.expresions.html">arabic.expresions</a></td>
         <td> </td>
       </tr>
       <tr>
