--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -291,7 +291,7 @@
       <tr>
         <td>38</td>
         <td><a href="https://www.lingohut.com/en/v771524/arabic-lessons-family-relations">family-relations</a></td>
-        <td> (RAC 30%)</td>
+        <td> (RAC 90%)</td>
         <td> </td>
       </tr>
       <tr>
@@ -302,7 +302,7 @@
       </tr>
       <tr>
         <td>40</td>
-        <td><a href="https://www.lingohut.com/en/v771526/arabic-lessons-outerwear">outerwear</a></td>
+        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771526/arabic-lessons-outerwear">outerwear</a></td>
         <td> </td>
         <td> </td>
       </tr>
@@ -325,7 +325,7 @@
       </tr>
       <tr>
         <td>43</td>
-        <td><a href="https://www.lingohut.com/en/v771529/arabic-lessons-jewelry">jewelry</a></td>
+        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771529/arabic-lessons-jewelry">jewelry</a></td>
         <td> </td>
         <td> </td>
       </tr>
@@ -350,7 +350,7 @@
       <tr>
         <td>46</td>
         <td><a href="https://www.lingohut.com/en/v771532/arabic-lessons-rooms-in-a-house">rooms-in-a-house</a></td>
-        <td>Fuwzi(70%)</td>
+        <td>Fuwzi(70%) - (RAC 00%)</td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -360,13 +360,13 @@
                   <!-- =============== -->
       <tr>
         <td>47</td>
-        <td><a href="https://www.lingohut.com/en/v771533/arabic-lessons-parts-of-a-house">parts-of-a-house</a></td>
+        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771533/arabic-lessons-parts-of-a-house">parts-of-a-house</a></td>
         <td> </td>
         <td> </td>
       </tr>
       <tr>
         <td>48</td>
-        <td><a href="https://www.lingohut.com/en/v771534/arabic-lessons-furniture">furniture</a></td>
+        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771534/arabic-lessons-furniture">furniture</a></td>
         <td> </td>
         <td> </td>
       </tr>
@@ -387,7 +387,7 @@
       <tr>
         <td>50</td>
         <td><a href="https://www.lingohut.com/en/v771536/arabic-lessons-bathroom-accessories">bathroom-accessories</a></td>
-        <td>Rahim </td>
+        <td>Rahim- (RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
@@ -441,13 +441,13 @@
       <tr>
           <td>57</td>
         <td><a href="https://www.lingohut.com/en/v771543/arabic-lessons-shopping">Shopping</a></td>
-        <td>Fuwzi(00%) </td>
+        <td>Fuwzi(00%)- (RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
           <td>58</td>
         <td><a href="https://www.lingohut.com/en/v771544/arabic-lessons-shopping-for-clothes">Shopping for clothes </a></td>
-        <td>Fuwzi(00%) </td>
+        <td>Fuwzi(00%)- (RAC 00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -458,19 +458,19 @@
       <tr>
           <td>59</td>
         <td><a href="https://www.lingohut.com/en/v771545/arabic-lessons-negotiating-a-price">Negotiating a price</a></td>
-        <td>Fuwzi(00%) </td>
+        <td>Fuwzi(00%)- (RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
           <td>60</td>
         <td><a href="https://www.lingohut.com/en/v771546/arabic-lessons-grocery-store">Grocery store</a></td>
-        <td>Fuwzi(00%) </td>
+        <td>Fuwzi(00%)- (RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
           <td>61</td>
         <td><a href="https://www.lingohut.com/en/v771547/arabic-lessons-grocery-shopping-list">Grocery shopping list </a></td>
-        <td>Fuwzi(00%) </td>
+        <td>Fuwzi(00%) - (RAC 00%)</td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -486,13 +486,13 @@
       <tr>
           <td>63</td>
         <td><a href="https://www.lingohut.com/en/v771549/arabic-lessons-sweet-fruits">Sweet fruits</a></td>
-        <td>Fuwzi(00%) </td>
+        <td>Fuwzi(00%)- (RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
         <td>64</td>
         <td><a href="https://www.lingohut.com/en/v771550/arabic-lessons-vegetables">Vegetables</a></td>
-        <td>Fuwzi(00%) </td>
+        <td>Fuwzi(00%)- (RAC 00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -524,7 +524,7 @@
       <tr>
         <td>68</td>
         <td><a href="https://www.lingohut.com/en/v771554/arabic-lessons-meats-at-the-butcher-shop">Meats at the butcher shop </a></td>
-        <td> </td>
+        <td> (RAC 00%)</td>
         <td> </td>
       </tr>
       <tr>
@@ -536,7 +536,7 @@
       <tr>
         <td>70</td>
         <td><a href="https://www.lingohut.com/en/v771556/arabic-lessons-bakery">Bakery</a></td>
-        <td> </td>
+        <td> (RAC 00%)</td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -592,19 +592,19 @@
       <tr>
         <td>77</td>
         <td><a href="https://www.lingohut.com/en/v771563/arabic-lessons-paying-the-bill">Paying the bill</a></td>
-        <td>Rahim</td>
+        <td>Rahim-(RAC 00%)</td>
         <td> </td>
       </tr>
       <tr>
         <td>78</td>
         <td><a href="https://www.lingohut.com/en/v771564/arabic-lessons-transportation">transportation</a></td>
-        <td> </td>
+        <td>(RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
         <td>79</td>
         <td><a href="https://www.lingohut.com/en/v771565/arabic-lessons-directions">direction</a></td>
-        <td>Fawzi </td>
+        <td>Fawzi- (RAC 00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -614,19 +614,19 @@
       <tr>
         <td>80</td>
         <td><a href="https://www.lingohut.com/en/v771566/arabic-lessons-asking-for-directions">asking-for-directions</a></td>
-        <td>Fawzi </td>
+        <td>Fawzi- (RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
         <td>81</td>
         <td><a href="https://www.lingohut.com/en/v771567/arabic-lessons-giving-directions">giving-directions</a></td>
-        <td>Fawzi </td>
+        <td>Fawzi-(RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
         <td>82</td>
         <td><a href="https://www.lingohut.com/en/v771568/arabic-lessons-getting-around-town">getting-around-town</a></td>
-        <td> </td>
+        <td>(RAC 00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
