--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -302,8 +302,8 @@
       </tr>
       <tr>
         <td>40</td>
-        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771526/arabic-lessons-outerwear">outerwear</a></td>
-        <td> </td>
+        <td><a href="https://www.lingohut.com/en/v771526/arabic-lessons-outerwear">outerwear</a></td>
+        <td>(RAC 00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -325,8 +325,8 @@
       </tr>
       <tr>
         <td>43</td>
-        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771529/arabic-lessons-jewelry">jewelry</a></td>
-        <td> </td>
+        <td><a href="https://www.lingohut.com/en/v771529/arabic-lessons-jewelry">jewelry</a></td>
+        <td>(RAC 00%) </td>
         <td> </td>
       </tr>
         <!-- =============== -->
@@ -360,14 +360,14 @@
                   <!-- =============== -->
       <tr>
         <td>47</td>
-        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771533/arabic-lessons-parts-of-a-house">parts-of-a-house</a></td>
-        <td> </td>
+        <td><a href="https://www.lingohut.com/en/v771533/arabic-lessons-parts-of-a-house">parts-of-a-house</a></td>
+        <td>(RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
         <td>48</td>
-        <td>(RAC 00%)<a href="https://www.lingohut.com/en/v771534/arabic-lessons-furniture">furniture</a></td>
-        <td> </td>
+        <td><a href="https://www.lingohut.com/en/v771534/arabic-lessons-furniture">furniture</a></td>
+        <td>(RAC 00%) </td>
         <td> </td>
       </tr>
       <tr>
