--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -743,7 +743,7 @@
                 <tr>
                   <td>96</td>
                   <td><a href="https://www.lingohut.com/en/v771582/arabic-lessons-traveling-on-an-airplane">traveling-on-an-airplane</a></td>
-                  <td> </td>
+                  <td>Rahim(00%) </td>
                   <td> </td>
                 </tr>
                 <tr>
