--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -43,13 +43,13 @@ a {
     <tr>
         <td>1</th>
         <td><a href="https://www.lingohut.com/en/v771488/arabic-lessons-meeting-someone">Meeting someone</a></td>
-        <td>Marth(%) Pedro- Kator- Clau - Marc</td>
+        <td>Marth(%)    - Clau - Marc</td>
         <td> </td>
     </tr>
     <tr>
         <td>2</th>
         <td><a href="https://www.lingohut.com/en/v771489/arabic-lessons-please-and-thank-you">Please and thank you </a></td>
-        <td>Marth(%)  Kator </td>
+        <td>Marth(%)    </td>
         <td> </td>
     </tr>
     <tr>
@@ -63,7 +63,7 @@ a {
     <tr>
     <td>4</th>
         <td><a href="https://www.lingohut.com/en/v771491/arabic-lessons-peace-on-earth">Peace on earth</a></td>
-        <td>Fawzi(50%)Marth(%) </td>
+        <td>Fawzi(90%)Marth(%) </td>
         <td> </td>
     </tr>
     <tr>
@@ -152,7 +152,7 @@ a {
     <tr>
         <td>17</td>
         <td><a href="https://www.lingohut.com/en/v771504/arabic-lessons-colors">Colors</a></td>
-        <td> Pedro-Kator- Marc-Rabibi(RAC)</td>
+        <td> Pedro-  Marc-Rabibi(RAC)</td>
         <td> </td>
     </tr>
     <tr>
