--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -26,8 +26,14 @@ a {
 <div   class="container mt-3">
 <h2 style="text-align: center;">Arbic course</h2>
 <p style="color: blue;text-align: center;">VOCAB</p>            
-<p style="color: blue;text-align: center;">MPC PFDMN SCS CGASSS RIP BBO FWIBZ FFFF COUBJ BJRPFHBKT MPSTSSN GGFSV HHDMSBD RFDHP TDAGG TTT BAI MMSHC AITA HRC EOP OOJJ INWCES UAAPPQLPPC T</p>            
+<p style="color: blue;text-align: center;">MPC PFDMN SCS CGASSS RIP BBO FWIBZ FFFF COUBJ BJRPFHBKT MPSTSSN GGFSV HHDMSBD RFDHP TDAGG TTT BAI MMSHC AITA HRC EOP OOJJ INWCES UAAPPQLPPC T</p>    
+
+<button>
+    <a href="https://www.lingohut.com/es/l69/aprende-árabe">spanish</a>
+</button>
+
 <table class="table table-dark table-hover">
+
     <thead>
     <tr>
         <th>Item</th>
