--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -32,6 +32,23 @@ a {
     <a href="https://www.lingohut.com/es/l69/aprende-árabe">spanish</a>
 </button>
 
+<button>
+    <a href="https://www.lingohut.com/ar/l119/تعلم-اللغة-الإندونيسية">الإندونيسية</a>
+</button>
+
+<button>
+    <a href="https://www.lingohut.com/ar/l80/تعلم-اللغة-الهولندية">الهولندية</a>
+</button>
+<button>
+    <a href="https://www.lingohut.com/ar/l2/تعلم-اللغة-الاسبانية">الاسبانية</a>
+</button>
+
+<button>
+    <a href="https://www.lingohut.com/ar/l58/تعلم-اللغة-الفرنسية">الفرنسية</a>
+</button>
+<button>
+    <a href="https://www.lingohut.com/ar/l59/تعلم-اللغة-الألمانية">الألمانية</a>
+</button>
 <table class="table table-dark table-hover">
 
     <thead>
