--- a/Arabic.course.html
+++ b/Arabic.course.html
@@ -49,6 +49,9 @@ a {
 <button>
     <a href="https://www.lingohut.com/ar/l59/تعلم-اللغة-الألمانية">الألمانية</a>
 </button>
+<button>
+  <a href="https://www.lingohut.com/ar/l66/تعلم-اللغة-البرتغالية">البرتغالية</a>
+</button>
 <table class="table table-dark table-hover">
 
     <thead>
